<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.robinloom</groupId>
    <artifactId>classcraft-parent</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ClassCraft - Parent POM</name>
    <description>Parent POM for ClassCraft project</description>
    <url>https://github.com/robinloom/classcraft</url>
    <inceptionYear>2026</inceptionYear>

    <licenses>
        <license>
            <name>Apache 2</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/robinloom/classcraft.git</connection>
        <developerConnection>scm:git:https://github.com/robinloom/classcraft.git</developerConnection>
        <url>https://github.com/robinloom/classcraft</url>
    </scm>

    <developers>
        <developer>
            <id>robinloom</id>
            <name>Robin Kösters</name>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>6.0.3</junit.version>
        <jspecify.version>1.0.0</jspecify.version>
        <javapoet.version>1.13.0</javapoet.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.robinloom</groupId>
                <artifactId>classcraft-annotations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robinloom</groupId>
                <artifactId>classcraft</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>${javapoet.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>classcraft-annotations</module>
        <module>classcraft</module>
        <module>classcraft-example</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
